--- a/README
+++ b/README
@@ -19,7 +19,7 @@ Gazebo cmake parameters available at configuring time:
    them to build the software.
  - USE_UPSTREAM_CFLAGS (bool) [default True]
    Use the recommend gazebo developers compiler optimizations flags
- - USE_EXTERNAL_TINYXML (bool) [default True]
+ - USE_EXTERNAL_TINYXML (bool) [default False]
    Use internal copy of tinyxml during the build
  - ENABLE_TESTS_COMPILATION (bool) [default True]
    Enabled or disable the test suite compilation. 
