--- a/README
+++ b/README
@@ -19,8 +19,10 @@ Gazebo cmake parameters available at configuring time:
    them to build the software.
  - USE_UPSTREAM_CFLAGS (bool) [default True]
    Use the recommend gazebo developers compiler optimizations flags
- - USE_EXTERNAL_TINYXML (bool) [default False]
+ - USE_EXTERNAL_TINYXML (bool) [default True]
    Use internal copy of tinyxml during the build
+ - USE_EXTERNAL_TINYXML2 (bool) [default False]
+   Use internal copy of tinyxml2 during the build
  - ENABLE_TESTS_COMPILATION (bool) [default True]
    Enabled or disable the test suite compilation. 
  - USE_LOW_MEMORY_TEST (bool) [default False]
