README: internal -> external
--HG--
branch : internal_tinyxml2

--- a/README
+++ b/README
@@ -20,9 +20,9 @@ Gazebo cmake parameters available at configuring time:
  - USE_UPSTREAM_CFLAGS (bool) [default True]
    Use the recommend gazebo developers compiler optimizations flags.
  - USE_EXTERNAL_TINYXML (bool) [default True]
-   Use internal copy of tinyxml during the build.
+   Use external copy of tinyxml during the build.
  - USE_EXTERNAL_TINYXML2 (bool) [default False]
-   Use internal copy of tinyxml2 during the build.
+   Use external copy of tinyxml2 during the build.
  - ENABLE_TESTS_COMPILATION (bool) [default True]
    Enabled or disable the test suite compilation. 
  - USE_LOW_MEMORY_TEST (bool) [default False]
